--- a/data/map.html
+++ b/data/map.html
@@ -68,6 +68,9 @@
                 }
             );
             L.control.scale().addTo(map_a7f6380e710402580808bf07d27ffe76);
+            
+            var myMap = map_a7f6380e710402580808bf07d27ffe76;
+            console.log(myMap.getZoom());
 
             
 
